<?php

namespace App\Enums;

enum ReactionType: string
{
    case LIKE = 'LIKE';
    case DISLIKE = 'DISLIKE';
}
