@startuml

skinparam classAttributeIconSize 0
skinparam roundcorner 10
skinparam class {
    BackgroundColor White
    BorderColor Orange
}

' ========================
' ENUMS (kept simple)
' ========================

enum Role {
  USER
  ADMIN
}

enum Level {
  BEGINNER
  INTERMEDIATE
  PRO
}

enum Status {
  PENDING
  APPROVED
  REJECTED
}

enum EventStatus {
  OPEN
  FULL
  CLOSED
}

enum FriendshipStatus {
  PENDING
  ACCEPTED
  BLOCKED
}

enum ReactionType {
  LIKE
  DISLIKE
}

enum Sport {
  FOOTBALL
  TENNIS
  BASKETBALL
  RUNNING
  YOGA
  CYCLING
  SWIMMING
  OTHER
}

' ========================
' MAIN ENTITIES
' ========================

class User {
  id
  name
  email
  bio
  location
  avatar
  city
  sports
  is_banned
  role
  level
}

class Spot {
  id
  name
  type
  address
  city
  status
  image
}

class Event {
  id
  title
  sport
  date
  location
  max_participants
  status
  organizer_id
  spot_id
}

class Question {
  id
  title
  content
  image
  sport
  user_id
  spot_id
  event_id
}

class Comment {
  id
  content
  user_id
  question_id
}

class Reaction {
  id
  type
  user_id
  target_id
  target_type
}

class Friendship {
  id
  user_id
  friend_id
  status
}

class Conversation {
  id
}

class Message {
  id
  content
  is_read
  user_id
  conversation_id
}

class Notification {
  id
  type
  data
  read_at
  user_id
}

' ========================
' RELATIONSHIPS (human style)
' ========================

User "1" -- "*" Question : posts
User "1" -- "*" Comment : writes
User "1" -- "*" Reaction : reacts
User "1" -- "*" Message : sends
User "1" -- "*" Friendship : connects
User "1" -- "*" Event : organizes
User "1" -- "*" Spot : creates

Event "*" -- "1" Spot : happens at
Event "*" -- "1" User : organizer

Question "1" -- "*" Comment
Question "1" -- "*" Reaction
Comment "1" -- "*" Reaction

Conversation "1" -- "*" Message

User "2" -- "*" Conversation : chats
User "*" -- "*" Event : joins

' simple polymorphic idea
Reaction "*" -- "*" Question
Reaction "*" -- "*" Comment
Reaction "*" -- "*" Event

@enduml